Bug 111481 - ZIP creation: extra bytes at beginning or within zipfile
Summary: ZIP creation: extra bytes at beginning or within zipfile
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-08 08:59 UTC by Miklos Vajna
Modified: 2017-08-08 12:00 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document. (7.89 KB, application/vnd.oasis.opendocument.text)
2017-08-08 08:59 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2017-08-08 08:59:17 UTC
Created attachment 135264 [details]
Reproducer document.

Steps to reproduce:

1) Open the attached ODT file in Writer.

2) Export as .epub

3) Use 'unzip -l test.epub' to list its file list.

Expected: output contains no warnings.

Actual: output is:

warning [test.epub]:  2546 extra bytes at beginning or within zipfile
Comment 1 Commit Notification 2017-08-08 12:00:12 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=570d7f9c9f5befdb84e213916036a2b9c7321259

tdf#111481 package: seek to 0 before truncate()

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Miklos Vajna 2017-08-08 12:00:41 UTC
I guess till this only affects the EPUB export, it makes little sense to backport this.