tdf#111481 package: seek to 0 before truncate()

With this, the ZIP files created by the EPUB export don't trigger this
warning on 'unzip -l':

warning [test.epub]:  2546 extra bytes at beginning or within zipfile

Change-Id: Ic9111d2c97b9337cf39a023def4afe4c64c4a3e5
Reviewed-on: https://gerrit.libreoffice.org/40873
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>